--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "scrapingwm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "dependencies": {
+    "bufferjs": "^3.0.1",
+    "moment": "^2.17.1",
+    "request": "^2.79.0",
+    "xlsx": "^0.8.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MiguelChS/WM_Scraping.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bufferjs": "^3.0.1",
-    "cheerio": "^0.22.0",
-    "express": "^4.14.0",
-    "request": "^2.79.0",
-    "xlsx": "^0.8.1"
-  }
+  "bugs": {
+    "url": "https://github.com/MiguelChS/WM_Scraping/issues"
+  },
+  "homepage": "https://github.com/MiguelChS/WM_Scraping#readme"
 }
