--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bufferjs": "^3.0.1",
     "moment": "^2.17.1",
+    "mongoose": "^4.7.8",
     "request": "^2.79.0",
     "xlsx": "^0.8.1"
   },
