--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.17.1",
     "mongoose": "^4.7.8",
     "request": "^2.79.0",
+    "trim": "0.0.1",
     "xlsx": "^0.8.1"
   },
   "devDependencies": {},
